--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,6 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    meta(name='google-site-verification', content='OwUilgGIGtfbtc5YRWybwr07nq22dMCJAHgxzLC2KHw')
   body
     block content
