Update main description

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,4 @@ extends layout
 
 block content
   h1= title
-  p Website coming soon...
+  p One day I'll get around to making this website... one day =(
